fix: remove scrollbar from .popup__form

--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,6 +1,5 @@
 .popup__form {
   padding: 54px 36px 48px 36px;
-  overflow: scroll;
   margin: auto;
   border: 0;
 }
